--- a/first.html
+++ b/first.html
@@ -21,6 +21,6 @@
     </ol>
     <p><h4>WEB</h4></p>
     <p>web is web ㅗㅗㅗㅗㅗㅗ</p>
-    <<input type="checkbox" name="new check" value="10">
+    <input type="checkbox" name="new check" value="10">
   </body>
 </html>
