--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </span>
 
       <span class = "contents">
-        <h4>JAVA SCRIPT</h4>
-        <p>About JS Lorem, ipsum dolor sit amet consectetur 
+        <h4>WEB</h4>
+        <p>여기에 뭐 적지Lorem, ipsum dolor sit amet consectetur 
           adipisicing elit. Molestias, vel placeat. 
           Aliquid itaque ea fuga sit doloremque eius architecto 
           voluptatum expedita vero dolor nobis consectetur
