텍스트 내용까지 전부 파일화 / 폴더로 정리

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>my_first_web</title>
     <meta charset = "utf-8">
 
-    <script src = "object_of_first.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src = "script\object_of_first.js"></script>
+    <link rel="stylesheet" href="style\style.css">
     
   </head>
 
@@ -30,23 +30,22 @@
     <span class = "main_body_frame">
       <span class = "nevigation">
         <ol>
-          <a href="first1.html"><li>HTML</li></a>
-          <a href = "first2.html"><li>CSS</li></a>
-          <a href = "first3.html"><li>JavaScript</li></a>
+          <a href="page\first1.html"><li>HTML</li></a>
+          <a href = "page\first2.html"><li>CSS</li></a>
+          <a href = "page\first3.html"><li>JavaScript</li></a>
         </ol>
       </span>
 
       <span class = "contents">
         <h4>WEB</h4>
-        <p>여기에 뭐 적지Lorem, ipsum dolor sit amet consectetur 
-          adipisicing elit. Molestias, vel placeat. 
-          Aliquid itaque ea fuga sit doloremque eius architecto 
-          voluptatum expedita vero dolor nobis consectetur
-           reprehenderit perferendis, quis at doloribus.</p>
+        <iframe src="contents\about_web.html" frameborder="0" width="800px" height="600px"></iframe>
+      </span>
+
+      <span class = "advertising">
+        <iframe src="image\advertising.png" frameborder="0" width="600px" height ="600px">광고</iframe>
       </span>
     </span>
 
     <p><input type="checkbox" name="new check" value="10">여기 있는 내용들을 전부 이해하였습니다</p>
-
   </body>
 </html>
